<resources>
    <string name="app_name">PracticaCalificadaN05</string>

    <!-- Main layout-->
    <string name="title">Mi juego de matemática</string>
    <string name="plus">+</string>
    <string name="substraction">-</string>
    <string name="dot">x</string>

    <!-- Second layaout -->

    <string name="plus_operation">%1$d + %2$d =</string>
    <string name="subst_operation">%1$d - %2$d =</string>
    <string name="mult_operation">%1$d x %2$d =</string>

    <string name="attempts_text">Vidas restantes: %1$d</string>
    <string name="score_text">Puntaje actual: %1$d</string>

    <string name="bad_imput">Por favor, ingresa un número</string>
    <string name="press_continue">Ya haz acertado, presiona el botón de continuar</string>
    <string name="continue_text">Acertaste, presiona el botón de continuar</string>

    <!-- last layout-->

    <string name="last_score_text">Puntaje: %1$d</string>
    <string name="last_attempts_text">Puntaje: %1$d</string>
    <string name="finished_game_win">Ganaste</string>
    <string name="finished_game_lost">Perdiste</string>




</resources>