<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:layout_above="@+id/button_box"
        android:textSize="30sp"
        />

    <LinearLayout
        android:id="@+id/button_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/plus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"/>

        <Button
            android:id="@+id/substraction_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/substraction"/>

        <Button
            android:id="@+id/multiplication_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"/>

    </LinearLayout>

</RelativeLayout>